# analog_vu_meter

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  resources.qrc
resources/: AppIcon.icns
src/: AudioCapture.cpp  AudioCapture.h  AudioCapture_linux.cpp  AudioCapture_macos.cpp  MainWindow.cpp  MainWindow.h  StereoVUMeterWidget.cpp  StereoVUMeterWidget.h  VUBallistics.cpp  VUBallistics.h  main.cpp  version.h.in
